--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "file-loader": "^6.2.0",
+    "google-map-react": "^2.2.1",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,5 +29,8 @@
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vite-plugin-svgr": "^3.2.0"
+  },
+  "devDependencies": {
+    "@types/google-map-react": "^2.1.7"
   }
 }
