--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "google-map-react": "^2.2.1",
     "next": "13.4.4",
     "react": "18.2.0",
+    "react-calendly": "^4.1.1",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.11.2",
     "sass": "^1.62.1",
