--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/google-map-react": "^2.1.7",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
@@ -30,8 +31,5 @@
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vite-plugin-svgr": "^3.2.0"
-  },
-  "devDependencies": {
-    "@types/google-map-react": "^2.1.7"
   }
 }
